--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "express": "^4.13.3",
     "express-session": "^1.12.1",
     "file-loader": "^0.8.4",
+    "google": "^1.3.0",
     "history": "^1.13.0",
     "http-proxy": "^1.12.0",
     "less": "^2.5.3",
